k8s/playbooks/files/dashboard-ingress.yaml
# Create an Ingress to provide convenient 
# access to the dashboard
# ingress controller will route traffic to the dashboard service(port 443)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - dashboard.local
    secretName: dashboard-tls
  rules: 
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
